Fix application destroy causing flickering

--- a/front/src/app/components/puzzle-preview/puzzle-preview.component.scss
+++ b/front/src/app/components/puzzle-preview/puzzle-preview.component.scss
@@ -186,6 +186,7 @@
   left: 0;
   right: 0;
   overflow: hidden;
+  background-color: #262524;
 
   .close-puzzle-button,
   .debug-webgl-button {
